# typesafe

./: .gitignore  Cargo.toml  FEATURE_SUMMARY.md  LICENSE  README.md  build.rs  build_package.bat  latex_data.json
examples/: basic.tex
src/: main.rs
web/: .gitignore  App.tsx  index.css  index.html  metadata.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/components/: FeatureGrid.tsx  Footer.tsx  Hero.tsx  Icons.tsx  Navbar.tsx  Screenshot.tsx
