[package]
name = "typesafe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "typesafe"
path = "src/main.rs"

[dependencies]
egui = "0.27"
eframe = "0.27"
epaint = "0.27"
rfd = "0.14"
pdfium-render = { version = "0.8.37", features = ["pdfium_latest", "image_latest", "thread_safe"] }
syntect = "5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
regex = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 0

[profile.dev-fast]
inherits = "dev"
opt-level = 1
split-debuginfo = "packed"
