[package]
name = "typesafe"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "typesafe"
path = "src/main.rs"

[dependencies]
egui = "0.27"
eframe = "0.27"
epaint = "0.27"
rfd = "0.14"
pdfium-render = { version = "0.8.37", features = ["pdfium_latest", "image_latest", "thread_safe"] }
syntect = "5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
strsim = "0.11"
zip = "0.6"
image = "0.25"
flate2 = "1.0"
resvg = "0.36"
tiny-skia = "0.11"
winreg = "0.52"
directories = "5.0"
unicode-segmentation = "1.10"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 0

[profile.dev-fast]
inherits = "dev"
opt-level = 1
split-debuginfo = "packed"
